# test-github-actions-cookiecutter-cpp-project

./: .gitlab-ci.yml  CMakeLists.txt  COPYING.md  FILESTRUCTURE.md  README.md  TODO.md  setup.py  sonar-project.properties
.github/workflows/: ci.yml  pypi.yml  sonarcloud.yml
app/: CMakeLists.txt  test-github-actions-cookiecutter-cpp-project_app.cpp
doc/: CMakeLists.txt  conf.py  index.rst
include/test-github-actions-cookiecutter-cpp-project/: test-github-actions-cookiecutter-cpp-project.hpp
python/: CMakeLists.txt  test-github-actions-cookiecutter-cpp-project_python.cpp
python/tests/: test_python_bindings.py
src/: CMakeLists.txt  test-github-actions-cookiecutter-cpp-project.cpp
tests/: CMakeLists.txt  test-github-actions-cookiecutter-cpp-project_t.cpp
